--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "latest",
     "next-contentlayer": "^0.3.4",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/node": "latest",
